--- a/opdracht2/index.html
+++ b/opdracht2/index.html
@@ -1,68 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Accordion</title>
+	<title>Carrousel</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<style type="text/css">
 		
-		
+			
+
 	</style>
 </head>
 <body>
 
-	<section class="accordion">
-		<h1>Accordion</h1>
-
-		<!-- <div class="person">
-			<div class="summary">
-				<h2>Naam</h2>
-				<button type="button" area-label="details-marker">
-					&vee;
-				</button>
-			</div>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi commodi officia, nisi quibusdam tempora, qui ut aliquid quos dolorum exercitationem, quisquam labore veniam officiis laboriosam. Quod rem perspiciatis expedita aspernatur.
-			</p>
-		</div> -->
-
-		<details class="person">
-			<summary class="summary">
-				<h2>Koop Reynders</h2>
-				<button type="button" area-label="details-marker">
-					&vee;
-				</button>
-			</summary>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi commodi officia, nisi quibusdam tempora, qui ut aliquid quos dolorum exercitationem, quisquam labore veniam officiis laboriosam. Quod rem perspiciatis expedita aspernatur.
-			</p>
-		</details>
-
-		<details class="person">
-			<summary class="summary">
-				<h2>Krijn Hoetmer</h2>
-				<button type="button" area-label="details-marker">
-					&vee;
-				</button>
-			</summary>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi commodi officia, nisi quibusdam tempora, qui ut aliquid quos dolorum exercitationem, quisquam labore veniam officiis laboriosam. Quod rem perspiciatis expedita aspernatur.
-			</p>
-		</details>
-
-		<details class="person">
-			<summary class="summary">
-				<h2>Joost Faber</h2>
-				<button type="button" area-label="details-marker">
-					&vee;
-				</button>
-			</summary>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi commodi officia, nisi quibusdam tempora, qui ut aliquid quos dolorum exercitationem, quisquam labore veniam officiis laboriosam. Quod rem perspiciatis expedita aspernatur.
-			</p>
-		</details>
+	<section class="carrousel">
+		<ul class="carrousel--container">
+			<li>
+				<article>
+					<h2>Aankondiging 1</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#">Animi commodi officia</a>, nisi quibusdam tempora, qui ut aliquid quos dolorum exercitationem, quisquam labore veniam officiis laboriosam. Quod rem perspiciatis expedita aspernatur.
+					</p>
+				</article>
+			</li
+			><li>
+				<article>
+					<h2>Aankondiging 2</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#">Animi commodi officia</a>, nisi quibusdam tempora, qui ut aliquid quos dolorum exercitationem, quisquam labore veniam officiis laboriosam. Quod rem perspiciatis expedita aspernatur.
+					</p>
+				</article>
+			</li
+			><li>
+				<article>
+					<h2>Aankondiging 3</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#">Animi commodi officia</a>, nisi quibusdam tempora, qui ut aliquid quos dolorum exercitationem, quisquam labore veniam officiis laboriosam. Quod rem perspiciatis expedita aspernatur.
+					</p>
+				</article>
+			</li
+			><li>
+				<article>
+					<h2>Aankondiging 4</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#">Animi commodi officia</a>, nisi quibusdam tempora, qui ut aliquid quos dolorum exercitationem, quisquam labore veniam officiis laboriosam. Quod rem perspiciatis expedita aspernatur.
+					</p>
+				</article>
+			</li>
+		</ul>
 	</section>
+	<button class="prev-btn" type="button" area-label="vorige">
+		Vorige
+	</button>
+	<button class="next-btn" type="button" area-label="volgende">
+		Volgende
+	</button>
 
 	<script type="text/javascript" src="script.js"></script>
 
