--- a/opdracht2/carrousel/index.html
+++ b/opdracht2/carrousel/index.html
@@ -4,8 +4,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Carrousel</title>
+	<script type="text/javascript">
+		document.createElement('section');
+		document.createElement('article');
+	</script>
 	<style type="text/css">
-		
+
 		* {
 			box-sizing: border-box;
 			padding: 0;
@@ -14,15 +18,12 @@
 			font-weight: inherit;
 		}
 
-		html {
+		body {
+			background-color: #F1F1F1;
 			font-family: sans-serif;
+			font-size: 1em;
 			font-weight: 300;
 			line-height: 1.4;
-		}
-
-		body {
-			background-color: #f1f1f1;
-			font-size: 1em;
 		}
 
 		h1 {
@@ -37,13 +38,53 @@
 			margin: 0 auto;
 		}
 
+		.carrousel--container {
+			position: relative;
+			left: 0;
+			display: block;
+			display: flex;
+			width: 100%;
+			-o-transition: all 1s ease-in-out;
+			-moz-transition: all 1s ease-in-out;
+			-webkit-transition: all 1s ease-in-out;
+			transition: all 1s ease-in-out;
+		}
+		.carrousel.inline .carrousel--container {
+			width: 400%;
+		}
+
+		.carrousel li {
+			float: left;
+			display: block;
+			width: 100%;
+			margin: 24px auto;
+			margin: 1.5rem auto;
+		}
+		.carrousel.inline li {
+			width: 25%;
+		}
+
+		.carrousel article {
+			display: block;
+			width: 100%;
+			padding: 24px;
+			padding: 1.5rem;
+			background-color: #FFF;
+		}
+
+		.carrousel article p {
+			margin: 24px auto;
+			margin: 1.5rem auto;
+		}
+
 		button {
 			display: none;
-			padding: 1.5em;
+			padding: 24px;
+			padding: 1.5rem;
 			border: 0;
 			margin: 0;
-			color: #fff;
-			background-color: #1c1c1c;
+			color: #FFF;
+			background-color: #1C1C1C;
 		}
 		button.inline {
 			display: block;
@@ -55,38 +96,6 @@
 
 		.next-btn {
 			float: right;
-		}
-
-		.carrousel--container {
-			position: relative;
-			left: 0;
-			display: block;
-			width: 100%;
-			transition: all 1s ease-in-out;
-		}
-		.carrousel.inline .carrousel--container {
-			width: 400%;
-		}
-
-		.carrousel li {
-			display: block;
-			width: 100%;
-			margin: 1.5em auto;
-		}
-		.carrousel.inline li {
-			display: inline-block;
-			width: 25%;
-		}
-
-		.carrousel article {
-			display: block;
-			width: 100%;
-			padding: 1.5em;
-			background-color: #fff;
-		}
-
-		.carrousel article p {
-			margin: 1.5em auto;
 		}
 
 	</style>
@@ -102,24 +111,24 @@
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#">Animi commodi officia</a>, nisi quibusdam tempora, qui ut aliquid quos dolorum exercitationem, quisquam labore veniam officiis laboriosam. Quod rem perspiciatis expedita aspernatur.
 					</p>
 				</article>
-			</li
-			><li>
+			</li>
+			<li>
 				<article>
 					<h2>Aankondiging 2</h2>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#">Animi commodi officia</a>, nisi quibusdam tempora, qui ut aliquid quos dolorum exercitationem, quisquam labore veniam officiis laboriosam. Quod rem perspiciatis expedita aspernatur.
 					</p>
 				</article>
-			</li
-			><li>
+			</li>
+			<li>
 				<article>
 					<h2>Aankondiging 3</h2>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#">Animi commodi officia</a>, nisi quibusdam tempora, qui ut aliquid quos dolorum exercitationem, quisquam labore veniam officiis laboriosam. Quod rem perspiciatis expedita aspernatur.
 					</p>
 				</article>
-			</li
-			><li>
+			</li>
+			<li>
 				<article>
 					<h2>Aankondiging 4</h2>
 					<p>
@@ -129,10 +138,10 @@
 			</li>
 		</ul>
 	</section>
-	<button class="prev-btn" type="button" area-label="vorige">
+	<button class="prev-btn" type="button" aria-label="vorige">
 		Vorige
 	</button>
-	<button class="next-btn" type="button" area-label="volgende">
+	<button class="next-btn" type="button" aria-label="volgende">
 		Volgende
 	</button>
 
