--- a/opdracht2/accordion/index.html
+++ b/opdracht2/accordion/index.html
@@ -49,7 +49,6 @@
 
 		.summary {
 			display: block;
-			display: flex;
 			width: 100%;
 			min-height: 72px;
 			min-height: 4.5rem;
@@ -62,17 +61,14 @@
 		}
 
 		.summary > h2 {
-			flex: 1 0 auto;
 			display: inline-block;
 			margin-right: 24px;
 			margin-right: 1.5rem;
-			height: 100%;
 			font-size: 1.5em;
 			line-height: 1;
 		}
 
 		.details-marker {
-			flex: 0 0 auto;
 			float: right;
 			display: flex;
 			justify-content: center;
@@ -80,6 +76,7 @@
 			width: 1.5em;
 			height: 1.5em;
 			padding: .5em;
+			margin: 0;
 			border: 0;
 			border-radius: 50%;
 			background-color: steelblue;
