--- a/opdracht2/carrousel/index.html
+++ b/opdracht2/carrousel/index.html
@@ -238,6 +238,8 @@
 							self.start(idx);
 							e.preventDefault();
 						}, false);
+					} else {
+						this.container().className = '';
 					}
 				},
 				start: function (idx) {
