Add some comments

--- a/opdracht2/carrousel/index.html
+++ b/opdracht2/carrousel/index.html
@@ -55,6 +55,7 @@
 			width: 400%;
 		}
 
+		/* When a browser supports flexbox, float is ignored and display: block; takes over */
 		.carrousel li {
 			float: left;
 			display: block;
